# ai-learning-journey

./: .readthedocs.yaml  README.rst  pyproject.toml
lumache/: __init__.py
lumache.egg-info/: PKG-INFO  SOURCES.txt
source/: conf.py  index.rst  lumache.rst
source/Knowledge Hub/: aiethicsresponsibility.rst  aitheoryapplications.rst  dataengineeringtechniques.rst  datastructuresalgorithms.rst  designarchitectures.rst  mathsubjectsforai.rst  optimizationefficiency.rst  programmingfundamentals.rst  sqldatabase.rst
source/Readings/: articles.rst  blogs.rst  books.rst
source/Resources/: datasets.rst  others.rst  papers.rst
source/Self-Experiences/Data-Analysis/: index.rst
source/Self-Experiences/Practical-Python/: index.rst
source/Self-Experiences/Read-the-Docs/: index.rst
source/Self-Experiences/Read-the-Docs/AI-Learning-Journey/: index.rst  my_own_journey.rst  study_with_me.rst
source/Self-Experiences/Read-the-Docs/AIO-Friends-Group/: aio_together.rst  index.rst  study_group.rst
source/Self-Experiences/Read-the-Docs/RTD-Tutorials/: build_your_project.rst  contribution.rst  customization.rst  deployment.rst  index.rst  initialization.rst  latex_markdown.rst  prerequisites.rst  rtd_guidelines.rst  rtd_toctree.rst  source_structure.rst  theme_options.rst  troubleshoot.rst  writing_your_docs.rst
source/Self-Experiences/VS-Code-Tool/: index.rst
source/_static/: custom.css
