[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lumache"
version = "0.1.0"
description = "A personal documentation project about learning AI topics."
readme = "README.rst"
requires-python = ">=3.10"
authors = [
  { name = "Tam Nguyen Study", email = "ai.thutam89@gmail.com" }
]
dependencies = ["myst-parser", "sphinx_rtd_theme"]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Framework :: Sphinx",
  "Topic :: Documentation"
]
[tool.setuptools]
packages = ["lumache"]